--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -61,4 +61,37 @@
    padding: 10px;
    
    }
+   .home_page_photo {
+
+    width: 200px;
+    height: 150px !important;
+    
+    }
+    
+    
+    /******* Home Page Pagination *********/
+    
+    .pager .active a {
+    
+    background-color: #000;
+    color: #fff;
+    
+    
+    }
+    
+    
+    .pager .active a:hover {
+    
+    background-color: #000 !important;
+    color: #fff;
+    
+    }
+
+    /****login page****/
+    
+    #login-id label {
+
+      color: #00FFFF;
+    }
+    
    
